--- a/face-data-extraction/video-analyzer.ipynb
+++ b/face-data-extraction/video-analyzer.ipynb
@@ -74,7 +74,7 @@
     "CONFIG = {\n",
     "    'SUBSCRIPTION_KEY': '5132dfc2f9884956addf73909ed8e0c2',\n",
     "    'LOCATION': 'trial',\n",
-    "    'ACCOUNT_ID': 'd8bc8ef8-132d-4e8f-b744-7ef92266c0a1'\n",
+    "    'ACCOUNT_ID': ''\n",
     "}\n",
     "\n",
     "video_analysis = VideoIndexer(\n",
